<resources>
    <string name="app_name">Swoosh</string>
    <string name="welcomeDes">Find a team in your city and dominate the league</string>
    <string name="background_image">background image</string>
    <string name="app_logo">app logo</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="get_started">GET STARTED</string>
    <string name="desired_league">Desired league:</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co-Ed</string>
    <string name="next">NEXT</string>
    <string name="baller">Baller</string>
    <string name="beginner">Beginner</string>
    <string name="i_am_a">I am a:</string>
    <string name="finish">Finish</string>
</resources>
